--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 	runtime 'org.postgresql:postgresql'
 	compile 'commons-validator:commons-validator:1.6'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
