Added configuration for tests

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	runtime 'org.postgresql:postgresql'
 	compile 'commons-validator:commons-validator:1.6'
 	compile 'javax.xml.bind:jaxb-api:2.3.1'
+	testCompile 'com.h2database:h2:1.4.200'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
